# spell

./: .gitignore  CHANGELOG.md  Cargo.toml  README  ci.cjs  fluence-lock.yaml  fluence.yaml  package-lock.json  pnpm-lock.yaml  pnpm-workspace.yaml  rust-toolchain.toml
.cargo/: config.toml
.fluence/secrets/: integration-tests-key.txt
.github/e2e/: docker-compose.yml
.github/release-please/: config.json  manifest.json
.github/scripts/: ci.cjs
.github/workflows/: ci.yml  e2e.yml  lint.yml  release.yml  run-tests.yml  snapshot.yml  test.yml  tests.yml
integration-tests/: README.md  config.py  fluence.yaml  framework.py  package-lock.json  package.json  pnpm-lock.yaml  requirements.txt  test_aqua.py  test_aqua_version.py
integration-tests/air/: test_spells.actor_spell.air  test_spells.inc_other_spell.air  test_spells.inc_value.air  test_spells.status_spell.air  test_spells.stranger_spell.air
integration-tests/aqua/: lib.aqua  spell.aqua  test_spells.aqua
src/aqua/: main.aqua
src/aqua/installation-spell/: .gitignore  README.md  install.aqua  package-lock.json  package.json  pnpm-lock.yaml  upload.sh  upstall.sh
src/aqua/installation-spell/plugins/ipfs/: ipfs_client.mjs
src/aqua/installation-spell/src/aqua/: cli.aqua  cli.ts  config.aqua  console.aqua  deal_spell.aqua  deploy.aqua  files.aqua  install.aqua  json.aqua  log.aqua  op.aqua  spell.aqua  spell_data.aqua  status.aqua  test_spell.aqua  trigger_config.aqua  types.aqua  upload.aqua
src/aqua/installation-spell/src/plugins/: local_services.mjs
src/aqua/installation-spell/src/plugins/ipfs/: ipfs_client.mjs  package-lock.json  package.json  pnpm-lock.yaml
src/aqua/installation-spell/src/scripts/: docker-compose.yml  get_logs.sh  install.sh  upload.sh  upload_deploy.sh  upstall.sh
src/aqua/spell/: api.aqua  package-lock.json  package.json  pnpm-lock.yaml  spell_service.aqua  trigger.aqua  types.aqua
src/spell/: service.yaml
src/spell/modules/spell/: Cargo.toml  build.sh  rust-toolchain.toml  test.sh
src/spell/modules/spell/artifacts/: Config.toml
src/spell/modules/spell/spell/: CHANGELOG.md  Cargo.toml  build.sh  module.yaml  test.sh
src/spell/modules/spell/spell-distro/: CHANGELOG.md  Cargo.toml
src/spell/modules/spell/spell-distro/src/: lib.rs
src/spell/modules/spell/spell-dtos/: CHANGELOG.md  Cargo.toml
src/spell/modules/spell/spell-dtos/src/: error.rs  lib.rs  trigger_config.rs  value.rs
src/spell/modules/spell/spell/artifacts/: .gitignore  Config.toml
src/spell/modules/spell/spell/src/: auth.rs  error_handling.rs  location.rs  log.rs  mailbox.rs  main.rs  misc.rs  schema.rs  script.rs  trigger_config.rs
src/spell/modules/spell/spell/src/auth/: keys.rs  mod.rs  roles.rs
src/spell/modules/spell/spell/src/kv/: collection.rs  json.rs  mod.rs  primitive.rs
src/spell/modules/spell/spell/tests_artifacts/: .gitignore  Config.toml
src/spell/modules/spell/src/: auth.rs  collection_kv.rs  error.rs  error_handling.rs  kv.rs  location.rs  main.rs  result.rs  schema.rs  script.rs  trigger_config.rs  value.rs
src/spell/modules/spell/src/kv/: collection.rs  primitive.rs
src/spell/modules/spell/tests_artifacts/: Config.toml
