[workspace]
resolver = "2"
members = [
  "spell",
  "spell-dtos",
  "spell-distro"
]

[workspace.dependencies]
marine-sqlite-connector = "0.9.3"
#marine-sqlite-connector =  { path = "/home/maar/Fluence/sqlite-wasm-connector" }

[patch.crates-io]
marine-rs-sdk = { version = "0.10.3",  features = ["logger"], git = "https://github.com/fluencelabs/marine-rs-sdk", branch = "feat/worker-id-in-call-params" }
fluence-app-service = { version = "0.31.1", git = "https://github.com/fluencelabs/marine", branch = "feat/worker-id-in-call-params" }