[package]
name = "fluence-spell-distro"
description = "distribution of a fluence spell service"
version = "0.5.1"
edition = "2021"
include = [ "/src", "/spell-service", "build.rs", "Cargo.toml" ]
license = "Apache-2.0"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
maplit = "1.0.2"

[build-dependencies]
built = "0.5.2"
