[package]
name = "fluence-spell-dtos"
description = "data structures for fluence spell service"
version = "0.6.0"
edition = "2021"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
marine-rs-sdk = "0.10.2"
thiserror = "1.0.37"
marine-sqlite-connector = { workspace = true }
eyre = "0.6.8"
serde = "1.0.149"
