[package]
name = "fluence-spell-dtos"
description = "data structures for fluence spell service"
version = "0.7.5"
edition = "2021"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
marine-rs-sdk = { workspace = true }
marine-sqlite-connector = { workspace = true }

thiserror = "1.0.37"
eyre = "0.6.8"
serde = "1.0.149"
