[package]
name = "fluence-spell"
version = "0.2.0"
edition = "2018"
publish = false

[[bin]]
name = "spell"
path = "src/main.rs"

[dependencies]
marine-rs-sdk = "0.7.1"
marine-sqlite-connector = "0.6.0"
eyre = "0.6.8"
cid = "0.8.6"
thiserror = "1.0.37"
fstrings = "0.2.3"
fluence-spell-dtos = { path = "../spell-dtos", version = "0.5.0" }
serde = "1.0.149"
serde_json = "1.0.89"

[dev-dependencies]
marine-rs-sdk-test = "0.8.1"
uuid = "1.2.1"
test-env-helpers = "0.2.2"
ctor = "0.1.26"
